--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,18 @@
-<h1> Hello</h1>
+<html>
+  <body>
+    <h1>You're using a layout</h1>
+    <p>
+      <h3> I'm a header</h3>
+      <p>Put things in the header</p>
+      <a href="http://google.com">This is a link to google</a>
+
+    </p>
+    <hr />
+    <div>
+      <h1> Hello</h1>
 <p>
   The time is now:
-  2014-06-06 16:38:57 +0530
+  2014-06-06 16:56:51 +0530
 </p>
 
 <p>
@@ -9,3 +20,12 @@
   
 </p>
 
+
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+    </div>
+  </body>
+</html>
