--- a/public/kshitij.html
+++ b/public/kshitij.html
@@ -1,4 +1,15 @@
-<h1> Hello</h1>
+<html>
+  <body>
+    <h1>You're using a layout</h1>
+    <p>
+      <h3> I'm a header</h3>
+      <p>Put things in the header</p>
+      <a href="http://google.com">This is a link to google</a>
+
+    </p>
+    <hr />
+    <div>
+      <h1> Hello</h1>
 <p>
  Kshitij Bathla:
   
@@ -16,3 +27,12 @@
   
 </p>
 
+
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+    </div>
+  </body>
+</html>
