--- a/public/me.html
+++ b/public/me.html
@@ -1,1 +1,20 @@
-foo
+<html>
+  <body>
+    <h1>You're using a layout</h1>
+    <p>
+      <h3> I'm a header</h3>
+      <p>Put things in the header</p>
+      <a href="http://google.com">This is a link to google</a>
+
+    </p>
+    <hr />
+    <div>
+      foo
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+    </div>
+  </body>
+</html>
