--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
+
+
 <html>
   <body>
     <h1>You're using a layout</h1>
     <p>
       <h3> I'm a header</h3>
       <p>Put things in the header</p>
-      <a href="http://google.com">This is a link to google</a>
+      <a href='http://google.com'>This is a link to google</a>
 
     </p>
     <hr />
@@ -12,7 +14,7 @@
       <h1> Hello</h1>
 <p>
   The time is now:
-  2014-06-06 16:56:51 +0530
+  2014-06-06 17:00:38 +0530
 </p>
 
 <p>
