--- a/public/me.html
+++ b/public/me.html
@@ -1,10 +1,12 @@
+
+
 <html>
   <body>
     <h1>You're using a layout</h1>
     <p>
       <h3> I'm a header</h3>
       <p>Put things in the header</p>
-      <a href="http://google.com">This is a link to google</a>
+      <a href='http://google.com'>This is a link to google</a>
 
     </p>
     <hr />
